# python-cicd-kata

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  workflow.yml
.github/actions/minimize-uv-cache/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: code-safety.yml  deploy.yml  workflow.yml
app/: main.py
app/application/: get_dice_roll.py
tests/application/: test_get_dice_roll.py
